lab1/Test/L1-A-10-7.output
Error Type A at Line 13
Error Type B at Line 31
Error Type A at Line 32
Error Type B at Line 40
Error Type B at Line 47
Error Type A at Line 54
Error Type A at Line 60
Error Type B at Line 62
Error Type A at Line 65
