lab1/Test/L1-A-10-7.cmm
int ;
int ;
struct sO91keKJLV7HDFb1_r5Z JXr4sRmmLsoM ( int PYBE 
  , struct DVpddHj jTAxOW75zuY ) {
  while ( I1FKm )   if ( t46DcDuwfJh0 )   return QE57sf3i 
    ;
else {
    struct TEygcUA4 FDAJRY6 ;
    struct _tMsk1sNQhfO3 PnZIxHg , _A107fFX3qRstNRaPxS 
      , Yt95 , UFwArxtJ = xjSO5PaeG93MCQrJBC ;
    float Mz [ 1169379375 ] ;
    if ( tcVsd0KjA3z )     JO04 = UyNHFrLYMb6EcNm1Cq 
      ^!= Ce + ! oKjketeFxcfH6Mx77rM ( jVn2y9P73GyF , hk6YcHAqKvTTeAMcc 
      = WGT5pO128Bn || vqYTdqJ && VpCMz < lP3ojSVUGQzrO5t 
      - AY4QY / awfai3qGZ22VH_ [ VuqxOv76Eg6 && KwBb - xzK9hiea5FZ1PJC 
      * - ( MKjsgMqhMbdCX7LqDuU && Etcigs >= gMhY4te_QX2rzLApNIl 
      [ WXs3Ph > LWbxacaUULagBd ] * r9AxKl <= - 14324305.110780787 
      ) . pMezl_UZt44DxNOpN . ZftN7G5 == sgV ( ) ] * - ! 
      - 1213976965 ) ;

  }

}
struct Ns2d5zSoaUVOAs2ba {
};
int POcJNRIrNUR1YN 
;
int zmMUKsDx , B 

;
struct eGkqHnScb2Qp9TQTe return ;
int `;
int ;
int ;
struct bJRh I84xYKGBUS6DjPzf 
;
int ;
struct OgS68h9Pkn1m1 ;
int ;
== int ;
int PBIaPZw8mc7BBQD ( ) {
}
struct {
};
int ;
int ;
int else ;
int IY8YaP4ulbGgcgkDbr ( ) {
  h ;
  if ( QlP61Lpf )   iSOWC5L2 ;
else   if ( oJotq )   v ;


^}
int ;
int c8DABhD ( ) {
}
int fYBxsoECv7_z ( ) {
  jxif9g5Ww_544O ;
  while @( jDYSQdyahPp )   to1aV7emolHaXSCaEC ;

< }
int UMiECpz_Rxe58WD15al ( ) {
}
$